assets/sass/main.scss
@import "variables";
@import "utility";

::selection {
  background: $dark-border-color;
  text-shadow: none;
}

html {
  font-family: 'Source Serif Pro', serif;
  background-color: $dark-background;
  color: $dark-color;
}

hr {
  border-color: $dark-color;
}

a {
  color: inherit;
}

code {
  font-family: 'Source Code Pro', monospace;
  padding: 5px;
  display: block;
  background-color: $dark-background-secondary;
}

video {
  max-width: 700px;
}


#container {
  margin: 0 auto;
  width: calc(100% - 300px);
  float: left;
}

#content {
  max-width: 1000px;
  margin: 0 auto;
}


/* Topbar, mobile nav */

#topbar {
  background-color: $dark-background-secondary;
  line-height: 3em;
  padding: 1em 1em;
  margin-bottom: 1em;
  display: none;

  .icon, .headline {
    display: table-cell;
  }

  .headline {
    width: 100%;
    text-align: center;
  }

  hr {
    display: none;
    margin-bottom: 1em;
  }

  a {
    font-size: 3em;
    font-weight: bold;
    text-decoration: none;
    vertical-align: middle;
    display: none;
    margin-bottom: 0.5em;

    &:active {
      transform: scale(0.9);
    }

    &:last-child {
      margin-bottom: 0;
    }
  }

  &.open {
    .headline {
      display: none;
    }

    .icon {
      float: right;
    }

    a {
      display: block;
    }

    hr {
      display: block;
    }
  }


}


/* Sidebar */

#sidebar {
  float: left;
  margin-top: 15px;
  margin-left: 25px;
  width: 275px;

  .logo {
    width: 100%;
  }

  .social {
    border-top: 1px solid $dark-color;
    padding-top: 15px;
    margin-bottom: 35px;
    text-align: center;

    a {
      background-color: $dark-background-secondary;
      padding: 0.5em;
      border-radius: 5px;
      text-decoration: none;
      display: inline-block;
      transition: background .5s ease-in-out;

      &:hover {
        background-color: $dark-border-color;
      }

      &:active {
        transform: scale(0.9);
      }

      span {
        font-size: 1.2em;
        position: relative;
        top: 2px;
      }
    }
  }

  .categories {
    //text-align: center;

    small {
      position: relative;
      top: -1px;
    }

    li {
      padding: 2px 10px;
      width: 115px;
      display: inline-block;
    }
  }

  .section {
    a {
      width: 100%;
      padding-left: 10px;
      display: table-cell;
      vertical-align: middle;
    }

    small {
      display: table-cell;
      vertical-align: middle;
      min-width: 45px;
    }
  }

  h3 {
    a {
      text-decoration: none;
    }
  }

  ul {
    list-style-type: none;
    padding-left: 0;
    margin-top: -15px;

    li {
      padding: 2px;
      border-radius: 5px;
      margin: 0;
      display: table;
      transition: background .5s ease-in-out;

      &:hover {
        background-color: $dark-border-color;
      }
    }
  }
}

.headline a {
  text-decoration: none;
}


/* Lists */

#list {
  list-style-type: none;
  padding: 0;
  ul {
    width:100%;
  }
  li {
    display: table;
    padding: 0.3em;
    border-radius: 5px;
    width:100%;
    transition: background .5s ease-in-out;
    &:hover {
      background-color: $dark-border-color-secondary;
    }
  }
  .thumb {
    display: table-cell;
    width: 145px;
  }
  .article {
    display: table-cell;
    padding-left:5px;
    vertical-align: middle;
  }
}


/* Foot */

#foot {
  border-top: 1px solid $dark-color;
  padding-top: 15px;
  margin-bottom:15px;
  margin-top: 15px;
  text-align:center;
}


/* Images */

.bg-gradient {
  height: 5em;
  text-align: center;
  transition: top .5s ease;
  position: relative;

  &.top {
    top: 0;
    line-height:2em;
    background: linear-gradient(to bottom, black, ease-in-out, transparent);
  }

  &.bottom {
    top: 50%;
    line-height:8em;
    vertical-align:bottom;
    background: linear-gradient(to top, black, ease-in-out, transparent);
  }
}

.frame {
  line-height: 0px;
  padding: 0.25rem;
  margin: 0.45rem;
  background-color: $dark-color;
  display:inline-block;

  img {
    object-fit: cover;
  }

  img, div {
    border-radius: 0.3rem;
  }

  &:hover .bg-gradient.top {
    top: -100%;
  }

  &:hover .bg-gradient.bottom {
    top: 0%;
  }
}

figcaption {
  color: $dark-background-secondary;
  line-height: 1.3;
}

img {
  &[src$='#floatleft'] {
    float: left;
  }
  &[src$='#floatright'] {
    float: right;
  }
}

.image-link {
  cursor: zoom-in;
}

.floatleft {
  float: left;
}

.floatright {
  float: right;
}


/* Pagination */

.page-holder {
  text-align: center;

  .pagination {
    display: inline-block;
    border: solid 1px $dark-border-color;
    border-radius: 0.25em;
    padding-left: 0;

    li {
      display: inline-block;
      border-right: solid 1px $dark-border-color;
      float: left;
      user-select: none;
    }

    .disabled {
      display: none;
    }

    .active {
      background-color: $dark-background-secondary;
    }
  }

  .page-item {
    a {
      text-decoration: none;
      display: inline-block;
      padding: 0.6em 0.8em;
    }

    &:hover {
      background-color: $dark-border-color;
    }

    &:active {
      transform: scale(0.9);
    }

    &.prev a::before, &.next a::after {
      content: '';
      position: absolute;
      display: inline-block;
      width: 16px;
      height: 16px;
      top: 11px;
      background: transparent url(../img/cd-icon-arrow-1.svg) no-repeat center center;

      left: 50%;
      transform: translateX(-50%);
      right: auto;
      transition: transform 0.3s;
    }

    &.prev, &.next {
      overflow: hidden;
      a {
        position: relative;
        &:hover i {
          transform: translateY(0);
        }
      }
      i {
        display: block;
        height: 100%;
        transform: translateY(150%);
        transition: transform 0.3s;
      }
    }

    &.prev {
      a:hover::before {
        transform: translateX(-50%) translateY(-50px);
      }
    }

    &.next {
      a::after {
        transform: translateX(-50%) rotate(180deg);
      }

      a:hover::after {
        transform: translateX(-50%) rotate(180deg) translateY(50px);
      }
    }
  }
}


/* Tags */

.tag {
  display: inline-block;
  background-color: $dark-background-secondary;
  padding: 0.1em 0.4em;
  margin: 0.1em;
  border-radius: 5px;
  text-decoration: none;
  transition: background .5s ease-in-out;
  &:hover {
    background-color: $dark-border-color;
  }
  &:active {
    transform: scale(0.9);
  }
}


/* Latest */

.latest-container {
  max-width: 45%;
}

.latest {
  background-position: center;
  overflow:hidden;
  max-width: 100%;
}


/* Mosaic */

.mosaic {
  .col {
    display: inline-block;

    &.small {
      width: 184px;
    }
  }
}


/* Responsive */

@media (max-width: 1350px) {
  #sidebar {
    width: 200px;
    .categories  {
      li {
        width: 78px;
      }
      small {
        display: none;
      }
    }
  }
  #container {
    width: calc(100% - 225px);
  }
  #content {
    max-width: 750px;
  }
}

@media (max-width: 1024px) {
  #topbar {
    display: block;
  }
  #sidebar {
    display: none;
  }
  #container {
    margin: 0 8px 8px 8px;
    width: 100%;
    float: none;
  }
  body {
    margin: 0;
  }
}

@media (max-width: 768px) {
  #container {
    width: auto;
  }
  #content {
    min-width: 320px;
    figure {
      display: block;

    }
    img {
      width: 100%;
      height: auto;
    }
    video {
      width: 100%;
      margin: .45rem;
    }
  }
  .mosaic {
    .col {
      width: 100% !important;
    }
  }

  .latest-container {
    float: none !important;
    max-width: none;

    .latest {
      width: 100% !important;
      background-size: cover;
    }
  }
}

/*
@media (max-width: 575px) {
  .latest-container {
    float: none !important;
    margin-left: auto;
    margin-right: auto;
    display: inline-block !important;
    max-width: none;
    text-align: center;
  }
}
*/

